TEMPOUT
BTreeNode.cc: In member function ‘int BTLeafNode::getKeyCount()’:
BTreeNode.cc:44:31: error: ‘memcpy’ was not declared in this scope
   memcpy(&key, bufPtr, intSize);
                               ^
BTreeNode.cc: In member function ‘RC BTLeafNode::insert(int, const RecordId&)’:
BTreeNode.cc:62:72: error: ‘memcpy’ was not declared in this scope
  memcpy(&nextPtr, bufPtr + PageFile::PAGE_SIZE - pageIdSize, pageIdSize);
                                                                        ^
BTreeNode.cc:83:51: error: ‘malloc’ was not declared in this scope
  char* tmpBuf = (char*) malloc(PageFile::PAGE_SIZE);
                                                   ^
BTreeNode.cc:91:13: error: ‘free’ was not declared in this scope
  free(tmpBuf);
             ^
BTreeNode.cc: In member function ‘RC BTLeafNode::insertAndSplit(int, const RecordId&, BTLeafNode&, int&)’:
BTreeNode.cc:125:72: error: ‘memcpy’ was not declared in this scope
  memcpy(&nextPtr, bufPtr + PageFile::PAGE_SIZE - pageIdSize, pageIdSize); 
                                                                        ^
BTreeNode.cc:127:62: error: ‘ceil’ was not declared in this scope
  int keepKeysCount = (int) ceil(((float) getKeyCount() + 1)/2); //number of keys to keep in this node
                                                              ^
BTreeNode.cc: In member function ‘RC BTLeafNode::locate(int, int&)’:
BTreeNode.cc:174:31: error: ‘memcpy’ was not declared in this scope
   memcpy(&key, bufPtr, intSize);
                               ^
BTreeNode.cc: In member function ‘RC BTLeafNode::readEntry(int, int&, RecordId&)’:
BTreeNode.cc:201:45: error: ‘memcpy’ was not declared in this scope
  memcpy(&key, bufPtr + pairLocation, intSize);
                                             ^
BTreeNode.cc:202:42: error: expected ‘)’ before ‘;’ token
  memcpy(&rid, bufPtr + pairSize + intSize; sizeof(rid));
                                          ^
BTreeNode.cc:202:55: error: expected ‘;’ before ‘)’ token
  memcpy(&rid, bufPtr + pairSize + intSize; sizeof(rid));
                                                       ^
BTreeNode.cc: In member function ‘PageId BTLeafNode::getNextNodePtr()’:
BTreeNode.cc:215:76: error: ‘memcpy’ was not declared in this scope
  memcpy(&pid, bufPtr + PageFile::PAGE_SIZE - sizeof(PageId), sizeof(PageId));
                                                                            ^
BTreeNode.cc: In member function ‘RC BTLeafNode::setNextNodePtr(PageId)’:
BTreeNode.cc:229:76: error: ‘memcpy’ was not declared in this scope
  memcpy(bufPtr + PageFile::PAGE_SIZE - sizeof(PageId), &pid, sizeof(PageId));
                                                                            ^
BTreeNode.cc: In member function ‘void BTLeafNode::print()’:
BTreeNode.cc:243:39: error: ‘memcpy’ was not declared in this scope
   memcpy(&insideKey, temp, sizeof(int)); //Save the current key inside buffer as insideKey
                                       ^
BTreeNode.cc: In member function ‘int BTNonLeafNode::getKeyCount()’:
BTreeNode.cc:295:31: error: ‘memcpy’ was not declared in this scope
   memcpy(&key, bufPtr, intSize);
                               ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::insert(int, PageId)’:
BTreeNode.cc:318:72: error: ‘memcpy’ was not declared in this scope
  memcpy(&nextPtr, bufPtr + PageFile::PAGE_SIZE - pageIdSize, pageIdSize);
                                                                        ^
BTreeNode.cc:339:51: error: ‘malloc’ was not declared in this scope
  char* tmpBuf = (char*) malloc(PageFile::PAGE_SIZE);
                                                   ^
BTreeNode.cc:347:13: error: ‘free’ was not declared in this scope
  free(tmpBuf);
             ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::insertAndSplit(int, PageId, BTNonLeafNode&, int&)’:
BTreeNode.cc:380:72: error: ‘memcpy’ was not declared in this scope
  memcpy(&nextPtr, bufPtr + PageFile::PAGE_SIZE - pageIdSize, pageIdSize); 
                                                                        ^
BTreeNode.cc:382:62: error: ‘ceil’ was not declared in this scope
  int keepKeysCount = (int) ceil(((float) getKeyCount() + 1)/2); //number of keys to keep in this node
                                                              ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::locateChildPtr(int, PageId&)’:
BTreeNode.cc:439:34: error: ‘memcpy’ was not declared in this scope
   memcpy(&keyTmp, bufPtr, intSize);
                                  ^
BTreeNode.cc:454:68: error: ‘memcpy’ was not declared in this scope
  memcpy(&pid, buffer + PageFile::PAGE_SIZE - pageIdSize, pageIdSize);
                                                                    ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::initializeRoot(PageId, int, PageId)’:
BTreeNode.cc:473:34: error: ‘memcpy’ was not declared in this scope
  memcpy(bufptr, &pid1, pageIdSize);
                                  ^
BTreeNode.cc: In member function ‘void BTNonLeafNode::print()’:
BTreeNode.cc:491:39: error: ‘memcpy’ was not declared in this scope
   memcpy(&insideKey, temp, sizeof(int)); //Save the current key inside buffer as insideKey
                                       ^
make: *** [bruinbase] Error 1
